z-index bug fix

--- a/src/main/resources/frontend/T8Webs/src/styles.less
+++ b/src/main/resources/frontend/T8Webs/src/styles.less
@@ -27,3 +27,7 @@ html, body {
   font-size: 15px !important;
   padding-top: 5px !important;
 }
+
+.e-spinner-pane {
+  z-index: 1500 !important;
+}
